--- a/begin.html
+++ b/begin.html
@@ -6,11 +6,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./_app/immutable/assets/3.D0xAmOGj.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CRVZboXr.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CPck3CGG.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.ojfWyhEA.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Dtvq9OYK.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/ijL4L35G.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CZ2TxZFJ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/UOKFneHZ.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CPy17GcD.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CV-BvKn3.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/8f6CvbNh.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DXWEqw7k.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/B0atJ7KR.js">
@@ -24,15 +25,16 @@
 			
 			<script>
 				{
-					__sveltekit_1adza5s = {
-						base: new URL(".", location).pathname.slice(0, -1)
+					__sveltekit_1m9jg2l = {
+						base: new URL(".", location).pathname.slice(0, -1),
+						assets: "/devina-22"
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CRVZboXr.js"),
-						import("./_app/immutable/entry/app.CPy17GcD.js")
+						import("./_app/immutable/entry/start.ojfWyhEA.js"),
+						import("./_app/immutable/entry/app.CV-BvKn3.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
