--- a/index.html
+++ b/index.html
@@ -5,27 +5,21 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="./_app/immutable/assets/2.BZOO4s1D.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.ojfWyhEA.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Dtvq9OYK.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BimpUKYi.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/inB56H5n.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/ijL4L35G.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CZ2TxZFJ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/APM0fx0N.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/UOKFneHZ.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CV-BvKn3.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.C76z0PAK.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/8f6CvbNh.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DXWEqw7k.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/B0atJ7KR.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DDayKU8k.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.CnbFvpO9.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CPCH8yMK.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CyWWGj4G.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents"><!--[--><!--[--><!----><!----><main><div class="container svelte-64nxx0"><!--[!--><!--]--></div> <!--[!--><!--]--></main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
-			
+		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1m9jg2l = {
+					__sveltekit_1ugcmif = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/devina-22"
 					};
@@ -33,15 +27,10 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.ojfWyhEA.js"),
-						import("./_app/immutable/entry/app.CV-BvKn3.js")
+						import("./_app/immutable/entry/start.BimpUKYi.js"),
+						import("./_app/immutable/entry/app.C76z0PAK.js")
 					]).then(([kit, app]) => {
-						kit.start(app, element, {
-							node_ids: [0, 2],
-							data: [null,null],
-							form: null,
-							error: null
-						});
+						kit.start(app, element);
 					});
 				}
 			</script>
