updated routing logic

--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./_app/immutable/assets/2.DhLxnOea.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.D4NB04QG.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/D4_b-4Yg.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CKcMXGo-.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/sIREu3Nt.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DJddhS0Y.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CizpCxGv.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.GqISFuc5.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CLu3EFBr.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DdRQWUpj.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Bo4J9WDE.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/cpcO81Z4.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.BdbiE7k3.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.wPaT_VHT.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.BuM-lMd4.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Bij4eJoV.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BclygcJX.js">
 	</head>
@@ -24,7 +24,7 @@
 			
 			<script>
 				{
-					__sveltekit_9ylb0f = {
+					__sveltekit_vtj4ky = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/devina-22"
 					};
@@ -32,8 +32,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.D4NB04QG.js"),
-						import("./_app/immutable/entry/app.GqISFuc5.js")
+						import("./_app/immutable/entry/start.CKcMXGo-.js"),
+						import("./_app/immutable/entry/app.CLu3EFBr.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
