--- a/begin.html
+++ b/begin.html
@@ -6,11 +6,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./_app/immutable/assets/3.CQWp5VQc.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CKcMXGo-.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/sIREu3Nt.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BgLElW7v.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CySiX-hK.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DJddhS0Y.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CizpCxGv.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CLu3EFBr.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DGAat7Su.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DdRQWUpj.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Bo4J9WDE.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/cpcO81Z4.js">
@@ -24,7 +24,7 @@
 			
 			<script>
 				{
-					__sveltekit_vtj4ky = {
+					__sveltekit_ajizbz = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/devina-22"
 					};
@@ -32,8 +32,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CKcMXGo-.js"),
-						import("./_app/immutable/entry/app.CLu3EFBr.js")
+						import("./_app/immutable/entry/start.BgLElW7v.js"),
+						import("./_app/immutable/entry/app.DGAat7Su.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
