changed font and added finale page

--- a/begin.html
+++ b/begin.html
@@ -5,26 +5,26 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="./_app/immutable/assets/3.CQWp5VQc.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.D62vHKgZ.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/W97eC2eg.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DJddhS0Y.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CizpCxGv.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.WZ1OOXGF.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DdRQWUpj.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Bo4J9WDE.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/cpcO81Z4.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.BdbiE7k3.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/3.BRfYD4BB.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Bij4eJoV.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BclygcJX.js">
+		<link href="./_app/immutable/assets/3.CUH4LZDp.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.IgeRkQK4.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/4gtB9ieE.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CqYINF6l.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/_KAcRfw_.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CmXXzjKQ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/C-jxBILG.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BCYp_KQR.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DKXzPwaM.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.Bf2bPG1R.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/3.C2xyQ4KI.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/D0EhB6C6.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BiC6aMCS.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div><!--[--><!--[--><!----><!----><main class="svelte-1kvhrj1"><div class="container"><!--[!--><!--]--></div></main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
+		<div><!--[--><!--[--><!----><!----><main class="svelte-sl4dhm"><div class="container"><!--[!--><!--]--></div></main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_1jn4zro = {
+					__sveltekit_x9z9ve = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/devina-22"
 					};
@@ -32,8 +32,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.D62vHKgZ.js"),
-						import("./_app/immutable/entry/app.WZ1OOXGF.js")
+						import("./_app/immutable/entry/start.IgeRkQK4.js"),
+						import("./_app/immutable/entry/app.CmXXzjKQ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
