added countdown, updated final page

--- a/countdown.html
+++ b/countdown.html
@@ -5,7 +5,7 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="./_app/immutable/assets/5.Cu5P8N55.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/4.DO1SW9qg.css" rel="stylesheet">
 		<link rel="modulepreload" href="./_app/immutable/entry/start.BF-sgS7B.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/2evoCyDu.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Buz_TUZG.js">
@@ -15,12 +15,11 @@
 		<link rel="modulepreload" href="./_app/immutable/chunks/CqaKyYLO.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DSQrjy0b.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.5a78abHV.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/5.CdLG8Op4.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/4.Dhs7-Dwn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/9BIP6oPW.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/D0eFOEBh.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div><!--[--><!--[--><!----><!----><video autoplay muted loop playsinline reverse="" style="position: fixed; left: 0; top: 0; width: 100vw; height: 100vh; object-fit: cover; z-index: -1;"><source src="https://cdn.pixabay.com/video/2021/07/01/79764-570718544_large.mp4" type="video/mp4"/> Your browser does not support the video tag.</video> <main class="svelte-1vfb099"><!--[!--><!--]--> <!--[!--><!--]--></main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
+		<div><!--[--><!--[--><!----><!----><main class="svelte-t96x7t"><div class="clock-container svelte-t96x7t"><div class="block svelte-t96x7t"><span class="number svelte-t96x7t">0</span></div> <div class="colon svelte-t96x7t">:</div> <div class="block svelte-t96x7t"><span class="number svelte-t96x7t">00</span></div> <div class="colon svelte-t96x7t">:</div> <div class="block svelte-t96x7t"><span class="number svelte-t96x7t">00</span></div> <div class="colon svelte-t96x7t">:</div> <div class="block svelte-t96x7t"><span class="number svelte-t96x7t">00</span></div></div></main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
@@ -36,7 +35,7 @@
 						import("./_app/immutable/entry/app.mrfCV3HX.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
-							node_ids: [0, 5],
+							node_ids: [0, 4],
 							data: [null,null],
 							form: null,
 							error: null
