--- a/index.html
+++ b/index.html
@@ -6,25 +6,25 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./_app/immutable/assets/2.DhLxnOea.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.IgeRkQK4.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/4gtB9ieE.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CqYINF6l.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_KAcRfw_.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CmXXzjKQ.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/C-jxBILG.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BCYp_KQR.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DKXzPwaM.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.Bf2bPG1R.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.Dj_FtVuO.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/D0EhB6C6.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BiC6aMCS.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BF-sgS7B.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/2evoCyDu.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Buz_TUZG.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BcJ8Okwj.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.mrfCV3HX.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/C27O5WHU.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CqaKyYLO.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DSQrjy0b.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.5a78abHV.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.C-8CjU-o.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/9BIP6oPW.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/D0eFOEBh.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div><!--[--><!--[--><!----><!----><main><div class="container svelte-9mhck9"><!--[!--><!--]--></div> <!--[!--><!--]--></main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_x9z9ve = {
+					__sveltekit_1y01vfh = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/devina-22"
 					};
@@ -32,8 +32,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.IgeRkQK4.js"),
-						import("./_app/immutable/entry/app.CmXXzjKQ.js")
+						import("./_app/immutable/entry/start.BF-sgS7B.js"),
+						import("./_app/immutable/entry/app.mrfCV3HX.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
