updated countdown for mobile devices

--- a/begin.html
+++ b/begin.html
@@ -6,11 +6,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./_app/immutable/assets/3.CUH4LZDp.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BF-sgS7B.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/2evoCyDu.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.4MOBXeHh.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BKkYadvx.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Buz_TUZG.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BcJ8Okwj.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.mrfCV3HX.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CJvZPqFq.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C27O5WHU.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CqaKyYLO.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DSQrjy0b.js">
@@ -24,7 +24,7 @@
 			
 			<script>
 				{
-					__sveltekit_1y01vfh = {
+					__sveltekit_1x4hfzr = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/devina-22"
 					};
@@ -32,8 +32,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BF-sgS7B.js"),
-						import("./_app/immutable/entry/app.mrfCV3HX.js")
+						import("./_app/immutable/entry/start.4MOBXeHh.js"),
+						import("./_app/immutable/entry/app.CJvZPqFq.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
