--- a/final.html
+++ b/final.html
@@ -6,25 +6,25 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./_app/immutable/assets/5.Cu5P8N55.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.4MOBXeHh.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BKkYadvx.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Buz_TUZG.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BcJ8Okwj.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CJvZPqFq.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/C27O5WHU.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CqaKyYLO.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DSQrjy0b.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.5a78abHV.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/5.CdLG8Op4.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/9BIP6oPW.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/D0eFOEBh.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DpCUrhLr.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DtXoaGmM.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/D1UIiWOc.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/mW9Gk2CS.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DADpcKj2.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Dj3VDq2K.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/PQJ0sMdq.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/B0hHZhQX.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.C5xpPdzw.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/5.mHW92AQM.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DVfL5IXX.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DwiAJise.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div><!--[--><!--[--><!----><!----><video autoplay muted loop playsinline reverse="" style="position: fixed; left: 0; top: 0; width: 100vw; height: 100vh; object-fit: cover; z-index: -1;"><source src="https://cdn.pixabay.com/video/2021/07/01/79764-570718544_large.mp4" type="video/mp4"/> Your browser does not support the video tag.</video> <main class="svelte-1vfb099"><!--[!--><!--]--> <!--[!--><!--]--></main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_1x4hfzr = {
+					__sveltekit_1v74w0g = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/devina-22"
 					};
@@ -32,8 +32,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.4MOBXeHh.js"),
-						import("./_app/immutable/entry/app.CJvZPqFq.js")
+						import("./_app/immutable/entry/start.DpCUrhLr.js"),
+						import("./_app/immutable/entry/app.DADpcKj2.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 5],
