--- a/begin.html
+++ b/begin.html
@@ -5,26 +5,26 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="./_app/immutable/assets/3.CUH4LZDp.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.4MOBXeHh.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BKkYadvx.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Buz_TUZG.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BcJ8Okwj.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CJvZPqFq.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/C27O5WHU.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CqaKyYLO.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DSQrjy0b.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.5a78abHV.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/3.DRQpiPXU.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/9BIP6oPW.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/D0eFOEBh.js">
+		<link href="./_app/immutable/assets/3.BdSrcGGN.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DpCUrhLr.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DtXoaGmM.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/D1UIiWOc.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/mW9Gk2CS.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DADpcKj2.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Dj3VDq2K.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/PQJ0sMdq.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/B0hHZhQX.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.C5xpPdzw.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/3.YTMHmbPF.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DVfL5IXX.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DwiAJise.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div><!--[--><!--[--><!----><!----><main class="svelte-sl4dhm"><div class="container"><!--[!--><!--]--></div></main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
+		<div><!--[--><!--[--><!----><!----><main class="svelte-nept72"><div class="container"><!--[!--><!--]--></div></main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_1x4hfzr = {
+					__sveltekit_1v74w0g = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/devina-22"
 					};
@@ -32,8 +32,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.4MOBXeHh.js"),
-						import("./_app/immutable/entry/app.CJvZPqFq.js")
+						import("./_app/immutable/entry/start.DpCUrhLr.js"),
+						import("./_app/immutable/entry/app.DADpcKj2.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
