--- a/begin.html
+++ b/begin.html
@@ -6,16 +6,16 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./_app/immutable/assets/3.BdSrcGGN.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DpCUrhLr.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DtXoaGmM.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CFt5Pcie.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/RU-nSIEv.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D1UIiWOc.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/mW9Gk2CS.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.DADpcKj2.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CxG9Qcgx.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Dj3VDq2K.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/PQJ0sMdq.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/B0hHZhQX.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.C5xpPdzw.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/3.YTMHmbPF.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/3.CiB8oWf1.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DVfL5IXX.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DwiAJise.js">
 	</head>
@@ -24,7 +24,7 @@
 			
 			<script>
 				{
-					__sveltekit_1v74w0g = {
+					__sveltekit_9qhlqx = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/devina-22"
 					};
@@ -32,8 +32,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DpCUrhLr.js"),
-						import("./_app/immutable/entry/app.DADpcKj2.js")
+						import("./_app/immutable/entry/start.CFt5Pcie.js"),
+						import("./_app/immutable/entry/app.CxG9Qcgx.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
