--- a/clue-1.html
+++ b/clue-1.html
@@ -5,7 +5,7 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="./_app/immutable/assets/5.gs8Dd9wG.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/4.CQWj582h.css" rel="stylesheet">
 		<link rel="modulepreload" href="./_app/immutable/entry/start.CFt5Pcie.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/RU-nSIEv.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D1UIiWOc.js">
@@ -15,11 +15,12 @@
 		<link rel="modulepreload" href="./_app/immutable/chunks/PQJ0sMdq.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/B0hHZhQX.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.C5xpPdzw.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/5.DW456wDh.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/4.AkWDc3c-.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DVfL5IXX.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DwiAJise.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div><!--[--><!--[--><!----><!----><main class="svelte-1ejv508"><div class="clock-container svelte-1ejv508"><div class="block svelte-1ejv508"><span class="number svelte-1ejv508">0</span></div> <div class="colon svelte-1ejv508">:</div> <div class="block svelte-1ejv508"><span class="number svelte-1ejv508">00</span></div> <div class="colon svelte-1ejv508">:</div> <div class="block svelte-1ejv508"><span class="number svelte-1ejv508">00</span></div> <div class="colon svelte-1ejv508">:</div> <div class="block svelte-1ejv508"><span class="number svelte-1ejv508">00</span></div></div></main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
+		<div><!--[--><!--[--><!----><!----><main class="svelte-13iskfx"><!--[!--><!--]--></main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
@@ -35,7 +36,7 @@
 						import("./_app/immutable/entry/app.CxG9Qcgx.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
-							node_ids: [0, 5],
+							node_ids: [0, 4],
 							data: [null,null],
 							form: null,
 							error: null
