--- a/clue-2.html
+++ b/clue-2.html
@@ -5,7 +5,7 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="./_app/immutable/assets/6.gs8Dd9wG.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/5.tn0RQdqM.css" rel="stylesheet">
 		<link rel="modulepreload" href="./_app/immutable/entry/start.CnVHfn4b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BDfES6x8.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CdNQtR8Q.js">
@@ -16,12 +16,11 @@
 		<link rel="modulepreload" href="./_app/immutable/chunks/DCAhBj54.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BLKNoGMv.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.DipBZ3Oe.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/6.Bmow7GOh.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/5.DLb4s2A1.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CaCymsO4.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BbCTXhJj.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div><!--[--><!--[--><!----><!----><main class="svelte-1ejv508"><div class="clock-container svelte-1ejv508"><div class="block svelte-1ejv508"><span class="number svelte-1ejv508">0</span></div> <div class="colon svelte-1ejv508">:</div> <div class="block svelte-1ejv508"><span class="number svelte-1ejv508">00</span></div> <div class="colon svelte-1ejv508">:</div> <div class="block svelte-1ejv508"><span class="number svelte-1ejv508">00</span></div> <div class="colon svelte-1ejv508">:</div> <div class="block svelte-1ejv508"><span class="number svelte-1ejv508">00</span></div></div></main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
+		<div><!--[--><!--[--><!----><!----><main>CLUE 2 (page under contruction)</main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
@@ -37,7 +36,7 @@
 						import("./_app/immutable/entry/app.8yvzna3Q.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
-							node_ids: [0, 6],
+							node_ids: [0, 5],
 							data: [null,null],
 							form: null,
 							error: null
