--- a/final.html
+++ b/final.html
@@ -5,26 +5,28 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="./_app/immutable/assets/6.Cu5P8N55.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CFt5Pcie.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/RU-nSIEv.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/D1UIiWOc.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/mW9Gk2CS.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CxG9Qcgx.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Dj3VDq2K.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/PQJ0sMdq.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/B0hHZhQX.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.C5xpPdzw.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/6.Sz2VokJj.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DVfL5IXX.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DwiAJise.js">
+		<link href="./_app/immutable/assets/7.Cu5P8N55.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CnVHfn4b.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BDfES6x8.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CdNQtR8Q.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Dfiw2qbj.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.8yvzna3Q.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/5Idiyfaf.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DTBBHO0y.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DCAhBj54.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BLKNoGMv.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.DipBZ3Oe.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/7.DEu4cgZX.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CaCymsO4.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BmBf4Sh-.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BbCTXhJj.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div><!--[--><!--[--><!----><!----><video autoplay muted loop playsinline reverse="" style="position: fixed; left: 0; top: 0; width: 100vw; height: 100vh; object-fit: cover; z-index: -1;"><source src="https://cdn.pixabay.com/video/2021/07/01/79764-570718544_large.mp4" type="video/mp4"/> Your browser does not support the video tag.</video> <main class="svelte-1vfb099"><!--[!--><!--]--> <!--[!--><!--]--></main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_9qhlqx = {
+					__sveltekit_lx70f2 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/devina-22"
 					};
@@ -32,11 +34,11 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CFt5Pcie.js"),
-						import("./_app/immutable/entry/app.CxG9Qcgx.js")
+						import("./_app/immutable/entry/start.CnVHfn4b.js"),
+						import("./_app/immutable/entry/app.8yvzna3Q.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
-							node_ids: [0, 6],
+							node_ids: [0, 7],
 							data: [null,null],
 							form: null,
 							error: null
