added clue pages, updated design

--- a/clue-2.html
+++ b/clue-2.html
@@ -5,26 +5,28 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="./_app/immutable/assets/5.tn0RQdqM.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CnVHfn4b.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BDfES6x8.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CdNQtR8Q.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Dfiw2qbj.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.8yvzna3Q.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/5Idiyfaf.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DTBBHO0y.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DCAhBj54.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BLKNoGMv.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DipBZ3Oe.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/5.DLb4s2A1.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CaCymsO4.js">
+		<link href="./_app/immutable/assets/5.D1QyC6qQ.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DjCu92oX.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DmT_dE7U.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CwxO7OcZ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CZK-5FPQ.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CqBt3Uns.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CdXMwl73.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/ns-Bb9eR.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/C7zf0VeO.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/ChTt-Sgp.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.CY5Vr_kT.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/5.CAaYb4kE.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Cd500uf3.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/FjzIaPhN.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BxPJaE_c.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div><!--[--><!--[--><!----><!----><main>CLUE 2 (page under contruction)</main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
+		<div><!--[--><!--[--><!----><!----><main class="svelte-1j8vvuj"><!--[!--><!--]--></main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_lx70f2 = {
+					__sveltekit_1dgo2tx = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/devina-22"
 					};
@@ -32,8 +34,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CnVHfn4b.js"),
-						import("./_app/immutable/entry/app.8yvzna3Q.js")
+						import("./_app/immutable/entry/start.DjCu92oX.js"),
+						import("./_app/immutable/entry/app.CqBt3Uns.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 5],
