--- a/index.html
+++ b/index.html
@@ -6,27 +6,27 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./_app/immutable/assets/2.DhLxnOea.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CnVHfn4b.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BDfES6x8.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CdNQtR8Q.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Dfiw2qbj.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.8yvzna3Q.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/5Idiyfaf.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DTBBHO0y.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DCAhBj54.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BLKNoGMv.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DipBZ3Oe.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.Bl7lH4Pg.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CaCymsO4.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BmBf4Sh-.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BbCTXhJj.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DjCu92oX.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DmT_dE7U.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CwxO7OcZ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CZK-5FPQ.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CqBt3Uns.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CdXMwl73.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/ns-Bb9eR.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/C7zf0VeO.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/ChTt-Sgp.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.CY5Vr_kT.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.BQ2Kwwlw.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Cd500uf3.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/FjzIaPhN.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BxPJaE_c.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div><!--[--><!--[--><!----><!----><main><div class="container svelte-9mhck9"><!--[!--><!--]--></div> <!--[!--><!--]--></main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_lx70f2 = {
+					__sveltekit_1dgo2tx = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/devina-22"
 					};
@@ -34,8 +34,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CnVHfn4b.js"),
-						import("./_app/immutable/entry/app.8yvzna3Q.js")
+						import("./_app/immutable/entry/start.DjCu92oX.js"),
+						import("./_app/immutable/entry/app.CqBt3Uns.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
