--- a/sitemap.html
+++ b/sitemap.html
@@ -5,26 +5,26 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="./_app/immutable/assets/8.CQ1Ducof.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CnVHfn4b.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BDfES6x8.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CdNQtR8Q.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Dfiw2qbj.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.8yvzna3Q.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/5Idiyfaf.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DTBBHO0y.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DCAhBj54.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BLKNoGMv.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DipBZ3Oe.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/8.xE8Mpfjj.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CaCymsO4.js">
+		<link href="./_app/immutable/assets/11.CQ1Ducof.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DjCu92oX.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DmT_dE7U.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CwxO7OcZ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CZK-5FPQ.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CqBt3Uns.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CdXMwl73.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/ns-Bb9eR.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/C7zf0VeO.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/ChTt-Sgp.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.CY5Vr_kT.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/11.CvMo-B6w.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Cd500uf3.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div><!--[--><!--[--><!----><!----><h1>Sitemap for development purposes only</h1> <main class="svelte-qf65xz"><button class="svelte-qf65xz">Start Page</button> <button class="svelte-qf65xz">begin( led from start page)</button> <button class="svelte-qf65xz">Clue 1</button> <button class="svelte-qf65xz">Clue 2</button> <button class="svelte-qf65xz">Final Clue, opened on laptop</button></main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
+		<div><!--[--><!--[--><!----><!----><h1>Sitemap for development purposes only</h1> <main class="svelte-qf65xz"><button class="svelte-qf65xz">Start Page</button> <button class="svelte-qf65xz">begin( led from start page)</button> <button class="svelte-qf65xz">Clue 1</button> <button class="svelte-qf65xz">Clue 2</button> <button class="svelte-qf65xz">Clue 3</button> <button class="svelte-qf65xz">Clue 4</button> <button class="svelte-qf65xz">Clue 5</button> <button class="svelte-qf65xz">Final Clue, opened on laptop</button></main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_lx70f2 = {
+					__sveltekit_1dgo2tx = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/devina-22"
 					};
@@ -32,11 +32,11 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CnVHfn4b.js"),
-						import("./_app/immutable/entry/app.8yvzna3Q.js")
+						import("./_app/immutable/entry/start.DjCu92oX.js"),
+						import("./_app/immutable/entry/app.CqBt3Uns.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
-							node_ids: [0, 8],
+							node_ids: [0, 11],
 							data: [null,null],
 							form: null,
 							error: null
