--- a/clue-4.html
+++ b/clue-4.html
@@ -5,7 +5,7 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="./_app/immutable/assets/4.CQWj582h.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/7.BqAg6-R4.css" rel="stylesheet">
 		<link rel="modulepreload" href="./_app/immutable/entry/start.DjCu92oX.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DmT_dE7U.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CwxO7OcZ.js">
@@ -16,13 +16,13 @@
 		<link rel="modulepreload" href="./_app/immutable/chunks/C7zf0VeO.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/ChTt-Sgp.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.CY5Vr_kT.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/4.BgoeHg8q.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/7.BvT19tR9.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Cd500uf3.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/FjzIaPhN.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BxPJaE_c.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div><!--[--><!--[--><!----><!----><main class="svelte-13iskfx"><!--[!--><!--]--></main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
+		<div><!--[--><!--[--><!----><!----><main class="svelte-f0s1hd"><!--[!--><!--]--></main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
@@ -38,7 +38,7 @@
 						import("./_app/immutable/entry/app.CqBt3Uns.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
-							node_ids: [0, 4],
+							node_ids: [0, 7],
 							data: [null,null],
 							form: null,
 							error: null
