--- a/final.html
+++ b/final.html
@@ -5,28 +5,29 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="./_app/immutable/assets/7.Cu5P8N55.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CnVHfn4b.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BDfES6x8.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CdNQtR8Q.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Dfiw2qbj.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.8yvzna3Q.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/5Idiyfaf.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DTBBHO0y.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DCAhBj54.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BLKNoGMv.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DipBZ3Oe.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/7.DEu4cgZX.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CaCymsO4.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BmBf4Sh-.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BbCTXhJj.js">
+		<link href="./_app/immutable/assets/10.Cu5P8N55.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DjCu92oX.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DmT_dE7U.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CwxO7OcZ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CZK-5FPQ.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CqBt3Uns.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CdXMwl73.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/ns-Bb9eR.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/C7zf0VeO.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/ChTt-Sgp.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.CY5Vr_kT.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/10.s58Dz-BF.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Cd500uf3.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BCweAceF.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/FjzIaPhN.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BxPJaE_c.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div><!--[--><!--[--><!----><!----><video autoplay muted loop playsinline reverse="" style="position: fixed; left: 0; top: 0; width: 100vw; height: 100vh; object-fit: cover; z-index: -1;"><source src="https://cdn.pixabay.com/video/2021/07/01/79764-570718544_large.mp4" type="video/mp4"/> Your browser does not support the video tag.</video> <main class="svelte-1vfb099"><!--[!--><!--]--> <!--[!--><!--]--></main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_lx70f2 = {
+					__sveltekit_1dgo2tx = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/devina-22"
 					};
@@ -34,11 +35,11 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CnVHfn4b.js"),
-						import("./_app/immutable/entry/app.8yvzna3Q.js")
+						import("./_app/immutable/entry/start.DjCu92oX.js"),
+						import("./_app/immutable/entry/app.CqBt3Uns.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
-							node_ids: [0, 7],
+							node_ids: [0, 10],
 							data: [null,null],
 							form: null,
 							error: null
